--- a/index.html
+++ b/index.html
@@ -11,13 +11,89 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-body{margin:0;font-family:Arial;background:#f4f6f8}
-header{background:#1e40af;color:#fff;padding:10px}
-main{display:grid;grid-template-columns:1fr 1fr;gap:10px;padding:10px}
-#map{height:420px}
-.card{background:#fff;padding:10px;border-radius:6px}
-@media(max-width:800px){main{grid-template-columns:1fr}}
+:root{
+  --azul:#1e40af;
+  --azul-claro:#3b82f6;
+  --cinza:#f3f4f6;
+  --borda:#e5e7eb;
+  --texto:#111827;
+}
+
+*{
+  box-sizing:border-box;
+}
+
+body{
+  margin:0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+  background:var(--cinza);
+  color:var(--texto);
+}
+
+header{
+  background:linear-gradient(90deg,var(--azul),var(--azul-claro));
+  color:#fff;
+  padding:14px 18px;
+}
+
+header h2{
+  margin:0;
+  font-size:20px;
+}
+
+main{
+  display:grid;
+  grid-template-columns: 1.1fr 0.9fr;
+  gap:16px;
+  padding:16px;
+}
+
+.card{
+  background:#fff;
+  border-radius:10px;
+  padding:14px;
+  box-shadow:0 4px 12px rgba(0,0,0,.08);
+}
+
+.card h3{
+  margin:0 0 10px 0;
+  font-size:16px;
+  border-bottom:1px solid var(--borda);
+  padding-bottom:6px;
+}
+
+select{
+  padding:6px 8px;
+  font-size:14px;
+  margin-bottom:8px;
+}
+
+#map{
+  height:420px;
+  border-radius:8px;
+  border:1px solid var(--borda);
+}
+
+#info{
+  margin-top:8px;
+  font-size:14px;
+  background:#f9fafb;
+  padding:6px 8px;
+  border-radius:6px;
+  border:1px solid var(--borda);
+}
+
+canvas{
+  max-height:420px;
+}
+
+@media(max-width:900px){
+  main{
+    grid-template-columns:1fr;
+  }
+}
 </style>
+
 </head>
 
 <body>
