--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="utf-8">
-<title>Dengue – Séries Temporais</title>
+<title>Dengue – Séries temporais</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
@@ -12,18 +12,18 @@
 body{
   margin:0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto;
-  background:#f4f4f5;
+  background:#f2f2f2;
   color:#111;
 }
 header{
-  padding:14px 18px;
-  background:#ffffff;
+  padding:12px 18px;
+  background:#fff;
   border-bottom:1px solid #ddd;
 }
 main{
-  padding:18px;
-  max-width:1000px;
+  max-width:1100px;
   margin:auto;
+  padding:18px;
 }
 .controls{
   display:flex;
@@ -37,13 +37,9 @@ select{
 }
 .card{
   background:#fff;
-  padding:14px;
+  padding:16px;
   border-radius:8px;
-  border:1px solid #e5e5e5;
-}
-h2{
-  margin:0;
-  font-size:18px;
+  border:1px solid #ddd;
 }
 </style>
 </head>
@@ -51,13 +47,16 @@ h2{
 <body>
 
 <header>
-  <h2>Dengue – séries temporais</h2>
+  <h2>Dengue – séries temporais anuais</h2>
 </header>
 
 <main>
 
 <div class="controls">
-  <select id="tipo">
+  <select id="dimensao">
+    <option value="total">Total Brasil</option>
+    <option value="estados">UF</option>
+    <option value="municipios">Município</option>
     <option value="sexo">Sexo</option>
     <option value="raca">Raça/cor</option>
     <option value="escolaridade">Escolaridade</option>
