--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="utf-8">
-<title>Dengue – Séries temporais</title>
+<title>Dengue – Séries Temporais</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
@@ -12,18 +12,18 @@
 body{
   margin:0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto;
-  background:#f2f2f2;
+  background:#f3f3f3;
   color:#111;
 }
 header{
-  padding:12px 18px;
-  background:#fff;
+  padding:14px 20px;
+  background:#ffffff;
   border-bottom:1px solid #ddd;
 }
 main{
   max-width:1100px;
   margin:auto;
-  padding:18px;
+  padding:20px;
 }
 .controls{
   display:flex;
@@ -41,6 +41,7 @@ select{
   border-radius:8px;
   border:1px solid #ddd;
 }
+h2{margin:0}
 </style>
 </head>
 
